--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,11 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 2rem;
     margin-top: 2rem;
+    /* text-decoration: none; */
 }
+.committee-members a {
+    text-decoration: none;
+  }
 
 .member {
     text-align: center;
@@ -228,6 +232,7 @@ body {
 .member h4 {
     color: var(--primary-color);
     margin-bottom: 0.5rem;
+    /* text-decoration: none; */
 }
 
 /* Topic List */
@@ -585,6 +590,9 @@ body {
     position: relative;
     padding-left: 1.2em; 
     text-align: left;    
+  }
+  .chair-list a {
+    text-decoration: none;
   }
  
   .chair-list li::before {
